--- a/pages/arma tu pedido.html
+++ b/pages/arma tu pedido.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arma tu Pedido</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="../favicom.ico">
     <link rel="stylesheet" href="../Css/Style.css"> 
 </head>
@@ -12,18 +13,23 @@
     <img class="fondoweb_2" src="../Assets/Imagenes/Fondoweb_2.jpg" alt="fondoweb_2">
 </div>
 <body class="fuente">
-    <header>   
+    <header class="header">   
         <nav>
             <ul class="listanav">
-                <li><a class="nav" href="../index.html">Inicio</a></li>
-                <li><a class="nav" href="./Mas de Nosotros.html">Mas de Nosotros</a></li>
-                <li><a class="nav" href="#">Arma tu Pedido</a></li>
-                <li><a class="nav" href="./Nuestra Ubicacion.html">Nuestra Ubicacion</a></li>
-                <li><a class="nav" href="./Imagenes del Producto.html">Imagenes de Nuestros Productos</a></li>
+                <li>
+                    <a class="nav" href="../index.html">Inicio</a></li>
+                <li>
+                    <a class="nav" href="./Mas de Nosotros.html">Nosotros</a></li>
+                <li>
+                    <a class="nav" href="#">Arma tu Pedido</a></li>
+                <li>
+                    <a class="nav" href="./Nuestra Ubicacion.html">Ubicacion</a></li>
+                <li>
+                    <a class="nav" href="./Imagenes del Producto.html">Nuestros Productos</a></li>
             </ul>
         </nav>
     </header>
-        <main>
+        <main class="main">
             <section>
                 <h1 class="h1Principal">Busca tu maceta y Personaliza el diseño a tu GUSTO!!</h1>
                 <p class="ParrafoPrincipal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat labore laborum ipsum dicta, cumque illum reiciendis numquam perferendis totam! Libero similique iusto quis exercitationem possimus iste fugiat pariatur repudiandae. Tenetur?</p>
@@ -43,10 +49,13 @@
         <div>
             <input type="email" placeholder="Escribi tu email">
         </div>
-        <footer>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com/" target="_blank">facebook</a>
-            <a href="https://web.whatsapp.com/" target="_blank">whatsapp</a>        
+        <footer class="footer">
+            <div class="link_redes">
+                <a class="footer-a" href="https://www.instagram.com/" target="_blank"><img src="../assets/images/instagram (3).svg" alt="Instagram"></a>
+                <a class="footer-a" href="https://www.facebook.com/" target="_blank"><img src="../assets/images/facebook.svg" alt="Facebook"></a>
+                <a class="footer-a" href="https://web.whatsapp.com/" target="_blank"><img src="../assets/images/phone.svg" alt="Whatsapp"></a>
+            </div>        
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
