--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mas de Nosotros</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="../favicom.ico">
     <link rel="stylesheet" href="../Css/Style.css">
 </head>
 <body class="fuente">
-    <header>
+    <header class="header">
         <nav>
             <ul class="listanav">
                 <li><a class="nav" href="../index.html">Inicio</a></li>
@@ -20,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section>
             <h1>Nuestro Origen como Macetas Personalisadas</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio totam veniam nostrum quia omnis animi officia. Officiis id quia eveniet minima dignissimos ea blanditiis sunt sequi, at deleniti consequuntur quod!</p>
@@ -33,14 +34,13 @@
         <h4>Nuestro Paso a Paso</h4>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LXqEyIv1aJ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
-    <footer>
-        <div>
-            <h5>Buscanos en Nuestras Redes Sociales!</h5>
+    <footer class="footer">
+        <div class="link_redes">
+            <a class="footer-a" href="https://www.instagram.com/" target="_blank"><img src="../assets/images/instagram (3).svg" alt="Instagram"></a>
+            <a class="footer-a" href="https://www.facebook.com/" target="_blank"><img src="../assets/images/facebook.svg" alt="Facebook"></a>
+            <a class="footer-a" href="https://web.whatsapp.com/" target="_blank"><img src="../assets/images/phone.svg" alt="Whatsapp"></a>
         </div>
-    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-    <a href="https://www.facebook.com/" target="_blank">facebook</a>
-    <a href="https://web.whatsapp.com/" target="_blank">whatsapp</a>
-   
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
