--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestra Ubicacion</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="../favicom.ico">
     <link rel="stylesheet" href="../Css/Style.css">
 </head>
 <body class="fuente">
-    <header> 
+    <header class="header"> 
         <nav>
             <ul class="listanav">
                 <li><a class="nav" href="../index.html">Inicio</a></li>
@@ -20,7 +21,7 @@
             </ul>
         </nav>
     </header>
-        <main>
+        <main class="main">
             <section>
                 <h1>Personaliza tu Maceta a tu Gusto!</h1>
                 <h2>Busca tu maceta y Personaliza el diseño a tu GUSTO!!</h2>
@@ -31,14 +32,13 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d108988.13510331037!2d-64.2126131299401!3d-31.389893630649397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943297f0ea61e2a5%3A0x129842bab143172b!2sVivero%20Bosque%20Viejo!5e0!3m2!1ses!2sar!4v1677336062245!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </main>
-        <footer>
-            <div>
-                <h4>Buscanos en Nuestras Redes Sociales!</h4>
+        <footer class="footer">
+            <div class="link_redes">
+                <a class="footer-a" href="https://www.instagram.com/" target="_blank"><img src="../assets/images/instagram (3).svg" alt="Instagram"></a>
+                <a class="footer-a" href="https://www.facebook.com/" target="_blank"><img src="../assets/images/facebook.svg" alt="Facebook"></a>
+                <a class="footer-a" href="https://web.whatsapp.com/" target="_blank"><img src="../assets/images/phone.svg" alt="Whatsapp"></a>
             </div>
-    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-    <a href="https://www.facebook.com/" target="_blank">facebook</a>
-    <a href="https://web.whatsapp.com/" target="_blank">whatsapp</a>
-
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
